log
Thu 09 May 2024 03:07:40 PM UTC: 
 tests:  1|8
total_score: 0/70
d456311
Thu 09 May 2024 03:15:31 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
2f9079b
Thu 09 May 2024 03:26:26 PM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++---
 1 file changed, 37 insertions(+), 3 deletions(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:49:10: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   49 |   newNode->pair->key = key;
      |   ~~~~~~~^~~~~~
treemap.c:50:10: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   50 |   newNode->pair->value = value;
      |   ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecb3bac
Thu 09 May 2024 03:27:38 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  3|8
total_score: 0/70
d195fc4
Thu 09 May 2024 03:28:48 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
5cc1a68
Thu 09 May 2024 03:38:17 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
857769d
